--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a:hover {
 
 /* HAMBURGER MENU */
 
+
 #hamburger-nav {
   display: none;
 }
@@ -90,7 +91,7 @@ a:hover {
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3 ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links {
@@ -98,20 +99,20 @@ a:hover {
   top: 100%;
   right: 0;
   background-color: white;
-  width: fit-content;
+  width: 100vw; 
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3 ease-in-out;
-}
+  transition: all 0.3s ease-in-out;
+  z-index: 1000; 
+  padding: 0; 
+  box-sizing: border-box; 
 
 .menu-links a {
   display: block;
-  padding: 10px;
-  text-align: center;
+  padding: 10px 20px; 
   font-size: 1.5rem;
   color: black;
   text-decoration: none;
-  transition: all 0.3 ease-in-out;
 }
 
 .menu-links li {
@@ -119,16 +120,11 @@ a:hover {
 }
 
 .menu-links.open {
-  max-height: 300px;
-}
-
-#main-link{
-  text-decoration: none;
-  cursor: pointer;
+  max-height: 300px; 
 }
 
 .hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(10px, 5px);
+  transform: rotate(45deg) translate(5px, 5px);
 }
 
 .hamburger-icon.open span:nth-child(2) {
@@ -136,19 +132,7 @@ a:hover {
 }
 
 .hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(10px, -5px);
-}
-
-.hamburger-icon span:first-child {
-  transform: none;
-}
-
-.hamburger-icon span:first-child {
-  opacity: 1;
-}
-
-.hamburger-icon span:first-child {
-  transform: none;
+  transform: rotate(-45deg) translate(5px, -5px);
 }
 
 /* SECTIONS */
@@ -558,3 +542,5 @@ footer {
 footer p {
   text-align: center;
 }
+
+
