--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ a:hover {
 
 /* HAMBURGER MENU */
 
-
 #hamburger-nav {
   display: none;
 }
@@ -91,7 +90,7 @@ a:hover {
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3 ease-in-out;
 }
 
 .menu-links {
@@ -99,20 +98,21 @@ a:hover {
   top: 100%;
   right: 0;
   background-color: white;
-  width: 100vw; 
+  width: fit-content;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3s ease-in-out;
-  z-index: 1000; 
-  padding: 0; 
-  box-sizing: border-box; 
+  transition: all 0.3 ease-in-out;
+  z-index: 1000;
+}
 
 .menu-links a {
   display: block;
-  padding: 10px 20px; 
+  padding: 10px;
+  text-align: center;
   font-size: 1.5rem;
   color: black;
   text-decoration: none;
+  transition: all 0.3 ease-in-out;
 }
 
 .menu-links li {
@@ -120,11 +120,16 @@ a:hover {
 }
 
 .menu-links.open {
-  max-height: 300px; 
+  max-height: 300px;
+}
+
+#main-link{
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(5px, 5px);
+  transform: rotate(45deg) translate(10px, 5px);
 }
 
 .hamburger-icon.open span:nth-child(2) {
@@ -132,7 +137,19 @@ a:hover {
 }
 
 .hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(5px, -5px);
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
 }
 
 /* SECTIONS */
@@ -542,5 +559,3 @@ footer {
 footer p {
   text-align: center;
 }
-
-
