--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a:hover {
   max-height: 300px;
 }
 
-#main-link{
+#main-link {
   text-decoration: none;
   cursor: pointer;
 }
@@ -212,7 +212,7 @@ section {
   gap: 2rem;
 }
 
-#profile-pic{
+#profile-pic {
   border-radius: 2rem;
 }
 
@@ -324,11 +324,11 @@ section {
   margin: auto 0;
 }
 
-.main-container{
+.main-container {
   margin-top: 2rem;
 }
 
-.skills-container{
+.skills-container {
   display: flex;
   text-align: initial;
   flex-wrap: wrap;
@@ -337,13 +337,13 @@ section {
   justify-content: space-around;
 }
 
-#education{
+#education {
   margin-bottom: -190px;
 }
 @media (max-width: 1200px) {
-    #education {
-        margin-bottom: 20px; 
-    }
+  #education {
+    margin-bottom: 20px;
+  }
 }
 
 /* EXPERIENCE SECTION */
@@ -370,7 +370,7 @@ section {
   text-align: initial;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: 2.5rem;
+  gap: 1.5rem;
   justify-content: space-around;
 }
 
@@ -379,6 +379,7 @@ article {
   width: 10rem;
   justify-content: space-around;
   gap: 0.5rem;
+  align-items: center;
 }
 
 article .icon {
@@ -388,50 +389,50 @@ article .icon {
 /* JOB SECTION */
 
 #job-experience-section {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .job-company-logo {
-    width: 100px;
-    height: auto;
-    margin-right: 1rem;
+  width: 100px;
+  height: auto;
+  margin-right: 1rem;
 }
 
 .job-experience-details-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .job-details-container {
-    display: flex;
-    align-items: flex-start;
-    background: white;
-    border-radius: 1rem;
-    padding: 1.5rem;
-    margin: 1rem 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
+  display: flex;
+  align-items: flex-start;
+  background: white;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  margin: 1rem 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 .job-experience-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: justify;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: justify;
 }
 
 .job-experience-sub-title {
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin: 0.5rem 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 0.5rem 0;
 }
 
 .job-details-container ul {
-    list-style-type: disc;
-    padding-left: 1.5rem;
-    margin: 0;
-    text-align: justify;
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  margin: 0;
+  text-align: justify;
 }
 
 /* PROJECTS SECTION */
@@ -501,7 +502,7 @@ article .icon {
   height: 2.5rem;
 }
 
-#space{
+#space {
   margin: 0.5rem;
 }
 
