--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ section {
   text-align: initial;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: 2.5rem;
+  gap: 1.5rem;
   justify-content: space-around;
 }
 
@@ -379,6 +379,7 @@ article {
   width: 10rem;
   justify-content: space-around;
   gap: 0.5rem;
+  align-items: center;
 }
 
 article .icon {
