--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ p {
   color: rgb(85, 85, 85);
 }
 
+.aligned-text {
+  text-align: justify;
+  line-height: 1.6;
+}
+
 /* TRANSITION */
 
 a,
@@ -492,6 +497,21 @@ article .icon {
   padding-left: 1.5rem;
   margin: 0;
   text-align: justify;
+}
+
+.company-link {
+  color: #555;
+  text-decoration: none;
+  margin-left: 0.5rem;
+  transition: color 0.3s ease;
+}
+
+.company-link:hover {
+  color: #007bff;
+}
+
+.company-link i {
+  font-size: 0.9rem;
 }
 
 /* PROJECTS SECTION */
